--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mongoose": "^8.3.4"
+    "mongoose": "^8.3.4",
+    "mqtt": "^5.7.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
